--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
+    <script src="https://turing.captcha.qcloud.com/TCaptcha.js"></script>
   </body>
 </html>
